--- a/portfolio-dayin.html
+++ b/portfolio-dayin.html
@@ -341,6 +341,42 @@
 			</div>
 			<button class="close-slider-btn" onclick="closeSwiper()">close ╳</button>
 		</div>
+
+		<script>
+			document.addEventListener("DOMContentLoaded", () => {
+				initializeStickyHeader();
+			});
+
+			window.addEventListener("load", () => {
+				initializeStickyHeader();
+			});
+
+			function initializeStickyHeader() {
+				console.log("Sticky Header Initialization Started");
+
+				const designProject = document.querySelector(".design-project");
+				const styleFilter = document.querySelector(".style-filter");
+
+				if (!designProject || !styleFilter) {
+					console.warn(
+						"designProject or styleFilter element not found in DOM."
+					);
+					return;
+				}
+
+				const designProjectOffsetTop = designProject.offsetTop;
+
+				window.addEventListener("scroll", () => {
+					if (window.scrollY >= designProjectOffsetTop) {
+						styleFilter.classList.add("sticky");
+					} else {
+						styleFilter.classList.remove("sticky");
+					}
+				});
+
+				console.log("Sticky Header Initialization Completed");
+			}
+		</script>
 	</body>
 </html>
 <style>
@@ -485,11 +521,11 @@
 </script>
 
 <script>
-	// 隱藏header並在滾動至底部時顯示
 	(function () {
 		let prevPos = 0;
 		const header = document.querySelector("header");
-		if (!header) return;
+		const styleFilter = document.querySelector(".style-filter");
+		if (!header || !styleFilter) return;
 		let throttleTimeout;
 
 		const getDocHeight = () => document.documentElement.scrollHeight;
@@ -510,6 +546,12 @@
 					header.classList[status ? "add" : "remove"]("invisible");
 				}
 
+				if (isAtBottom) {
+					styleFilter.classList.add("scrolled-bottom");
+				} else {
+					styleFilter.classList.remove("scrolled-bottom");
+				}
+
 				prevPos = currPos;
 				throttleTimeout = null;
 			}, 100);
@@ -518,56 +560,20 @@
 </script>
 
 <script>
-	document.addEventListener("DOMContentLoaded", () => {
-		const header = document.querySelector(".style-filter");
-		const targetSection = document.querySelector(".design-project");
+	const styleFilter = document.querySelector(".style-filter");
 
-		if (header && targetSection) {
-			const headerHeight = header.offsetHeight;
-			const sectionBottom =
-				targetSection.offsetTop + targetSection.offsetHeight;
-			let prevScrollY = window.scrollY;
-			let isSticky = false;
-
-			window.addEventListener("scroll", () => {
-				const currentScrollY = window.scrollY;
-				const isWithinSection =
-					currentScrollY >= targetSection.offsetTop &&
-					currentScrollY < sectionBottom;
-
-				if (isWithinSection && !isSticky) {
-					header.classList.add("sticky");
-					isSticky = true;
-				} else if (!isWithinSection && isSticky) {
-					header.classList.remove("sticky");
-					isSticky = false;
-				}
-
-				const isScrollingUp = currentScrollY < prevScrollY;
-				header.classList.toggle("scrolled-up", isScrollingUp);
-				prevScrollY = currentScrollY;
-			});
-		}
-	});
-</script>
-
-<script>
-	function isScrolledToBottom() {
-		return (
-			window.innerHeight + window.scrollY >=
-			document.documentElement.scrollHeight
-		);
-	}
+	let lastScrollY = window.scrollY;
 
 	window.addEventListener("scroll", () => {
-		const elements = document.querySelectorAll(".style-filter");
-		if (isScrolledToBottom()) {
-			elements.forEach((element) => element.classList.add("scrolled-bottom"));
+		const currentScrollY = window.scrollY;
+
+		if (currentScrollY < lastScrollY) {
+			styleFilter.classList.add("scrolled-up");
 		} else {
-			elements.forEach((element) =>
-				element.classList.remove("scrolled-bottom")
-			);
+			styleFilter.classList.remove("scrolled-up");
 		}
+
+		lastScrollY = currentScrollY;
 	});
 </script>
 
