--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="住宅空間"
+						data-category="樣品屋"
 						data-aos="zoom-in-up"
 						href="portfolio-mengyu.html">
 						<img
@@ -239,7 +239,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="住宅空間"
+						data-category="公共設計"
 						data-aos="zoom-in-up"
 						href="portfolio-heju.html">
 						<img
@@ -295,7 +295,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="住宅空間"
+						data-category="公共設計"
 						data-aos="zoom-in-up"
 						href="portfolio-zephyrus.html">
 						<img
@@ -337,7 +337,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="住宅空間"
+						data-category="樣品屋"
 						data-aos="zoom-in-up"
 						href="portfolio-hiddeninthehustle.html">
 						<img
@@ -351,7 +351,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="住宅空間"
+						data-category="樣品屋"
 						data-aos="zoom-in-up"
 						href="portfolio-blankspace.html">
 						<img
@@ -365,7 +365,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="樣品屋"
+						data-category="公共設計"
 						data-aos="zoom-in-up"
 						href="portfolio-boxoflight.html">
 						<img
@@ -379,7 +379,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="樣品屋"
+						data-category="公共設計"
 						data-aos="zoom-in-up"
 						href="portfolio-chengxiyingju.html">
 						<img
@@ -687,14 +687,16 @@
 					</div>
 				</div>
 			</div>
-
-			<div class="contant-info" id="contact-us">
-				<p>萱源實業有限公司</p>
-				<p>02-2921-7363</p>
-				<p>新北市三重區同安東街4號</p>
-				<p>shiuanyuan1@gmail.com</p>
-			</div>
 		</main>
+		<div class="qrcode">
+			<img src="./image/QRCode/sy_ig.jpg" alt="" />
+		</div>
+		<div class="contant-info" id="contact-us">
+			<p>萱源實業有限公司</p>
+			<p>02-2921-7363</p>
+			<p>新北市三重區同安東街4號</p>
+			<p>shiuanyuan1@gmail.com</p>
+		</div>
 		<!-- Swiper JS -->
 		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
