--- a/portfolio-boxoflight.html
+++ b/portfolio-boxoflight.html
@@ -58,10 +58,10 @@
 			<div
 				class="project"
 				data-selected="true"
-				data-category="樣品屋,光之盒"
+				data-category="公共設計,光之盒"
 				id="top">
 				<h2 class="project-name">光之盒</h2>
-				<h3 class="project-type">樣品屋</h3>
+				<h3 class="project-type">公共設計</h3>
 				<p class="project-content mt">
 					打造「高坪效、高彈性、高規格」的空間作為設計主軸，藉此實現人們心中嚮往的空間風貌。首先，運用大面玻璃帷幕作圍塑，讓陽光得以援引入室，為空間營造溫暖的氛圍。接著，以簡約的日式北歐風作為空間基調，摒除多餘的雕飾，並利用自然材質元素打造出舒適宜人的活動空間。透過實質的手法，創造美好的生活情境和精神意識。
 				</p>
@@ -142,30 +142,10 @@
 			<div class="design-project" id="design-project">
 				<h2 class="portfolio-list">其他作品</h2>
 				<div class="style-filter">
-					<button
-						href="javascript: void(0)"
-						onclick="filterPortfolios('all')"
-						class="btn btn-selected">
-						全部
-					</button>
-					<button
-						href="javascript: void(0)"
-						onclick="filterPortfolios('住宅空間')"
-						class="btn">
-						住宅空間
-					</button>
-					<button
-						href="javascript: void(0)"
-						onclick="filterPortfolios('公共設計')"
-						class="btn">
-						公共設計
-					</button>
-					<button
-						href="javascript: void(0)"
-						onclick="filterPortfolios('樣品屋')"
-						class="btn">
-						樣品屋
-					</button>
+					<button data-category="all" class="btn btn-selected">全部</button>
+					<button data-category="住宅空間" class="btn">住宅空間</button>
+					<button data-category="公共設計" class="btn">公共設計</button>
+					<button data-category="樣品屋" class="btn">樣品屋</button>
 				</div>
 				<div class="latest-works">
 					<a
@@ -184,7 +164,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="住宅空間,夢語"
+						data-category="樣品屋,夢語"
 						data-aos="zoom-in-up"
 						href="portfolio-mengyu.html">
 						<img
@@ -198,7 +178,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="住宅空間,合矩"
+						data-category="公共設計,合矩"
 						data-aos="zoom-in-up"
 						href="portfolio-heju.html">
 						<img
@@ -228,7 +208,7 @@
 						class="portfolio-size"
 						data-category="公共設計,輕舟穩行"
 						data-aos="zoom-in-up"
-						href="portfolio-huicui.html">
+						href="portfolio-wenxing.html">
 						<img
 							class="latest-work-portfolio"
 							src="./image/front cover/portfolio-05/IMG_0504.jpg"
@@ -254,7 +234,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="住宅空間,湖畔煦風"
+						data-category="公共設計,湖畔煦風"
 						data-aos="zoom-in-up"
 						href="portfolio-zephyrus.html">
 						<img
@@ -296,7 +276,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="住宅空間,都市隱居"
+						data-category="樣品屋,都市隱居"
 						data-aos="zoom-in-up"
 						href="portfolio-hiddeninthehustle.html">
 						<img
@@ -310,7 +290,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="住宅空間,空白格"
+						data-category="樣品屋,空白格"
 						data-aos="zoom-in-up"
 						href="portfolio-blankspace.html">
 						<img
@@ -324,7 +304,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="樣品屋,光之盒"
+						data-category="公共設計,光之盒"
 						data-aos="zoom-in-up"
 						data-aos-offset="60"
 						href="portfolio-boxoflight.html">
@@ -339,7 +319,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="樣品屋,澄曦映居"
+						data-category="公共設計,澄曦映居"
 						data-aos="zoom-in-up"
 						data-aos-offset="30"
 						href="portfolio-chengxiyingju.html">
@@ -354,14 +334,6 @@
 					</a>
 				</div>
 			</div>
-
-			<div class="contant-info" id="contact-us">
-				<p>萱源實業有限公司</p>
-				<p>02-2921-7363</p>
-				<p>新北市三重區同安東街4號</p>
-				<p>shiuanyuan1@gmail.com</p>
-			</div>
-
 			<!-- Swiper -->
 			<div class="swiper-overlay" id="swiperOverlay" style="display: none">
 				<div class="swiper mySwiper2">
@@ -464,6 +436,14 @@
 				}
 			</script>
 		</main>
+
+		<div class="contant-info" id="contact-us">
+			<p>萱源實業有限公司</p>
+			<p>02-2921-7363</p>
+			<p>新北市三重區同安東街4號</p>
+			<p>shiuanyuan1@gmail.com</p>
+		</div>
+
 		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 		<!-- Swiper JS -->
 		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
