--- a/portfolio-hiddeninthehustle.html
+++ b/portfolio-hiddeninthehustle.html
@@ -58,10 +58,10 @@
 			<div
 				class="project"
 				data-selected="true"
-				data-category="住宅空間,都市隱居"
+				data-category="樣品屋,都市隱居"
 				id="top">
 				<h2 class="project-name">都市隱居</h2>
-				<h3 class="project-type">住宅空間</h3>
+				<h3 class="project-type">樣品屋</h3>
 				<p class="project-content mt">
 					本案是位於市中心的私宅規劃案，由於空間坪數的限制，因此整體主要是以精緻、簡約的Japandi風格進行擘劃。透過開放式的格局規劃、恰到好處的傢俱配置、隱藏式收納的設計，以及智能家居系統、聲學設計的導入，不僅能保持場域的開闊與簡潔俐落，還能賦予小坪數住宅彈性、便利的使用效益，讓居者得以在繁忙的都市生活中尋得寧靜與愜意。
 				</p>
@@ -142,30 +142,10 @@
 			<div class="design-project" id="design-project">
 				<h2 class="portfolio-list">其他作品</h2>
 				<div class="style-filter">
-					<button
-						href="javascript: void(0)"
-						onclick="filterPortfolios('all')"
-						class="btn btn-selected">
-						全部
-					</button>
-					<button
-						href="javascript: void(0)"
-						onclick="filterPortfolios('住宅空間')"
-						class="btn">
-						住宅空間
-					</button>
-					<button
-						href="javascript: void(0)"
-						onclick="filterPortfolios('公共設計')"
-						class="btn">
-						公共設計
-					</button>
-					<button
-						href="javascript: void(0)"
-						onclick="filterPortfolios('樣品屋')"
-						class="btn">
-						樣品屋
-					</button>
+					<button data-category="all" class="btn btn-selected">全部</button>
+					<button data-category="住宅空間" class="btn">住宅空間</button>
+					<button data-category="公共設計" class="btn">公共設計</button>
+					<button data-category="樣品屋" class="btn">樣品屋</button>
 				</div>
 				<div class="latest-works">
 					<a
@@ -184,7 +164,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="住宅空間,夢語"
+						data-category="樣品屋,夢語"
 						data-aos="zoom-in-up"
 						href="portfolio-mengyu.html">
 						<img
@@ -198,7 +178,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="住宅空間,合矩"
+						data-category="公共設計,合矩"
 						data-aos="zoom-in-up"
 						href="portfolio-heju.html">
 						<img
@@ -228,7 +208,7 @@
 						class="portfolio-size"
 						data-category="公共設計,輕舟穩行"
 						data-aos="zoom-in-up"
-						href="portfolio-huicui.html">
+						href="portfolio-wenxing.html">
 						<img
 							class="latest-work-portfolio"
 							src="./image/front cover/portfolio-05/IMG_0504.jpg"
@@ -254,7 +234,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="住宅空間,湖畔煦風"
+						data-category="公共設計,湖畔煦風"
 						data-aos="zoom-in-up"
 						href="portfolio-zephyrus.html">
 						<img
@@ -296,7 +276,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="住宅空間,都市隱居"
+						data-category="樣品屋,都市隱居"
 						data-aos="zoom-in-up"
 						href="portfolio-hiddeninthehustle.html">
 						<img
@@ -310,7 +290,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="住宅空間,空白格"
+						data-category="樣品屋,空白格"
 						data-aos="zoom-in-up"
 						href="portfolio-blankspace.html">
 						<img
@@ -324,7 +304,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="樣品屋,光之盒"
+						data-category="公共設計,光之盒"
 						data-aos="zoom-in-up"
 						data-aos-offset="60"
 						href="portfolio-boxoflight.html">
@@ -339,7 +319,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="樣品屋,澄曦映居"
+						data-category="公共設計,澄曦映居"
 						data-aos="zoom-in-up"
 						data-aos-offset="30"
 						href="portfolio-chengxiyingju.html">
@@ -354,14 +334,6 @@
 					</a>
 				</div>
 			</div>
-
-			<div class="contant-info" id="contact-us">
-				<p>萱源實業有限公司</p>
-				<p>02-2921-7363</p>
-				<p>新北市三重區同安東街4號</p>
-				<p>shiuanyuan1@gmail.com</p>
-			</div>
-
 			<!-- Swiper -->
 			<div class="swiper-overlay" id="swiperOverlay" style="display: none">
 				<div class="swiper mySwiper2">
@@ -464,6 +436,14 @@
 				}
 			</script>
 		</main>
+
+		<div class="contant-info" id="contact-us">
+			<p>萱源實業有限公司</p>
+			<p>02-2921-7363</p>
+			<p>新北市三重區同安東街4號</p>
+			<p>shiuanyuan1@gmail.com</p>
+		</div>
+
 		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 		<!-- Swiper JS -->
 		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
