--- a/portfolio-zephyrus.html
+++ b/portfolio-zephyrus.html
@@ -58,10 +58,10 @@
 			<div
 				class="project"
 				data-selected="true"
-				data-category="住宅空間,湖畔煦風"
+				data-category="公共設計,湖畔煦風"
 				id="top">
 				<h2 class="project-name">湖畔煦風</h2>
-				<h3 class="project-type">住宅空間</h3>
+				<h3 class="project-type">公共設計</h3>
 				<!-- <p class="project-content mt"></p> -->
 				<div class="image-container">
 					<img
@@ -137,30 +137,10 @@
 			<div class="design-project" id="design-project">
 				<h2 class="portfolio-list">其他作品</h2>
 				<div class="style-filter">
-					<button
-						href="javascript: void(0)"
-						onclick="filterPortfolios('all')"
-						class="btn btn-selected">
-						全部
-					</button>
-					<button
-						href="javascript: void(0)"
-						onclick="filterPortfolios('住宅空間')"
-						class="btn">
-						住宅空間
-					</button>
-					<button
-						href="javascript: void(0)"
-						onclick="filterPortfolios('公共設計')"
-						class="btn">
-						公共設計
-					</button>
-					<button
-						href="javascript: void(0)"
-						onclick="filterPortfolios('樣品屋')"
-						class="btn">
-						樣品屋
-					</button>
+					<button data-category="all" class="btn btn-selected">全部</button>
+					<button data-category="住宅空間" class="btn">住宅空間</button>
+					<button data-category="公共設計" class="btn">公共設計</button>
+					<button data-category="樣品屋" class="btn">樣品屋</button>
 				</div>
 				<div class="latest-works">
 					<a
@@ -179,7 +159,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="住宅空間,夢語"
+						data-category="樣品屋,夢語"
 						data-aos="zoom-in-up"
 						href="portfolio-mengyu.html">
 						<img
@@ -193,7 +173,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="住宅空間,合矩"
+						data-category="公共設計,合矩"
 						data-aos="zoom-in-up"
 						href="portfolio-heju.html">
 						<img
@@ -223,7 +203,7 @@
 						class="portfolio-size"
 						data-category="公共設計,輕舟穩行"
 						data-aos="zoom-in-up"
-						href="portfolio-huicui.html">
+						href="portfolio-wenxing.html">
 						<img
 							class="latest-work-portfolio"
 							src="./image/front cover/portfolio-05/IMG_0504.jpg"
@@ -249,7 +229,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="住宅空間,湖畔煦風"
+						data-category="公共設計,湖畔煦風"
 						data-aos="zoom-in-up"
 						href="portfolio-zephyrus.html">
 						<img
@@ -291,7 +271,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="住宅空間,都市隱居"
+						data-category="樣品屋,都市隱居"
 						data-aos="zoom-in-up"
 						href="portfolio-hiddeninthehustle.html">
 						<img
@@ -305,7 +285,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="住宅空間,空白格"
+						data-category="樣品屋,空白格"
 						data-aos="zoom-in-up"
 						href="portfolio-blankspace.html">
 						<img
@@ -319,7 +299,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="樣品屋,光之盒"
+						data-category="公共設計,光之盒"
 						data-aos="zoom-in-up"
 						data-aos-offset="60"
 						href="portfolio-boxoflight.html">
@@ -334,7 +314,7 @@
 					</a>
 					<a
 						class="portfolio-size"
-						data-category="樣品屋,澄曦映居"
+						data-category="公共設計,澄曦映居"
 						data-aos="zoom-in-up"
 						data-aos-offset="30"
 						href="portfolio-chengxiyingju.html">
@@ -349,14 +329,6 @@
 					</a>
 				</div>
 			</div>
-
-			<div class="contant-info" id="contact-us">
-				<p>萱源實業有限公司</p>
-				<p>02-2921-7363</p>
-				<p>新北市三重區同安東街4號</p>
-				<p>shiuanyuan1@gmail.com</p>
-			</div>
-
 			<!-- Swiper -->
 			<div class="swiper-overlay" id="swiperOverlay" style="display: none">
 				<div class="swiper mySwiper2">
@@ -459,6 +431,14 @@
 				}
 			</script>
 		</main>
+
+		<div class="contant-info" id="contact-us">
+			<p>萱源實業有限公司</p>
+			<p>02-2921-7363</p>
+			<p>新北市三重區同安東街4號</p>
+			<p>shiuanyuan1@gmail.com</p>
+		</div>
+
 		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 		<!-- Swiper JS -->
 		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
