--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>SY GROUP</title>
+		<meta
+			property="og:image"
+			content="https://raw.githubusercontent.com/shiuanyuan/ShiuanYuan/main/image/sydesign_logo.jpg" />
+		<title>SY GROUP-test area</title>
 		<link rel="icon" href="./image/favicon.ico" type="image/x-icon" />
-		<link rel="stylesheet" href="./index.css" />
+		<link rel="stylesheet" href="./index test.css" />
 
 		<!-- swiper輪播套件 -->
 		<link
@@ -91,55 +94,59 @@
 						name="tabs-example"
 						id="tab1"
 						checked />
-					<label for="tab1" class="tabs__label">2024</label>
+					<label for="tab1" class="tabs__label">2025 - 2024</label>
 					<div class="tabs__content">
-						<div>
-							<p>2024</p>
-							<p>德國iF設計獎 IF Design Awards -設計獎</p>
+						<div class="award-area">
+							<p class="award-item-year">2025</p>
+							<div class="award-item-name">
+								<p>美國泰坦地產大獎 TITAN Property Awards</p>
+								<p>美國繆思設計大獎 MUSE Design Awards</p>
+								<p>澳洲設計大獎 Australian Design Awards</p>
+							</div>
 						</div>
-						<div>
-							<p>2024</p>
-							<p>柏林設計大獎 Berlin Design Awards -銀獎</p>
-						</div>
-						<div>
-							<p>2024</p>
-							<p>米蘭設計大獎 MILAN Design Awards -金獎</p>
+						<div class="award-area">
+							<p class="award-item-year">2024</p>
+							<div class="award-item-name">
+								<p>台灣室内設計大獎 Taiwan Interior Design Award</p>
+								<p>德國iF設計獎 iF Design Awards</p>
+								<p>WILD Design Awards</p>
+								<p>英國IAA倫敦設計大獎 London Design Awards</p>
+								<p>芬蘭 Arch Design Award</p>
+								<p>米蘭設計大獎 MILAN Design Award</p>
+								<p>柏林設計大獎 Berlin Design Award</p>
+							</div>
 						</div>
 					</div>
 					<input
 						type="radio"
 						class="tabs__radio"
 						name="tabs-example"
-						id="tab2" />
-					<label for="tab2" class="tabs__label">2023</label>
+						id="tab2"
+						checked />
+					<label for="tab2" class="tabs__label">2023 - 2022</label>
 					<div class="tabs__content">
-						<div>
-							<p>2023</p>
-							<p>iF 國際設計大獎 -設計獎</p>
+						<div class="award-area">
+							<p class="award-item-year">2023</p>
+							<div class="award-item-name">
+								<p>加拿大未來設計獎4Fututure Awards</p>
+								<p>亞洲設計大类 ASIAN DESIGN AWWARDS</p>
+								<p>倫敦設計大獎 London Design Awards</p>
+								<p>美國泰坦地產大獎 TITAN Property Awards</p>
+								<p>法國創新設計大獎 NOVUM Design Awards</p>
+								<p>瑞士 BLT Built Design Awards</p>
+								<p>美國繆思設計大獎 MUSE Design Awards</p>
+								<p>iF國際設計大獎</p>
+							</div>
 						</div>
-						<div>
-							<p>2023</p>
-							<p>美國 MUSE Design Awards(美國繆斯設計獎) -白金獎</p>
-						</div>
-						<div>
-							<p>2023</p>
-							<p>DESIGN100 倫敦設計大獎 -金獎</p>
-						</div>
-						<div>
-							<p>2023</p>
-							<p>美國 TITAN泰坦地產設計大獎 -白金獎</p>
-						</div>
-						<div>
-							<p>2023</p>
-							<p>法國創新設計大獎 NOVUM Design Award (NDA) -金獎</p>
-						</div>
-						<div>
-							<p>2023</p>
-							<p>法國創新設計大獎 NOVUM Design Award (NDA) -金獎</p>
-						</div>
-						<div>
-							<p>2023</p>
-							<p>瑞士 BLT Built Design Awards -HONORABLE MENTION -佳作</p>
+						<div class="award-area">
+							<p class="award-item-year">2022</p>
+							<div class="award-item-name">
+								<p>美國 Muse Design Awards</p>
+								<p>布里斯本設計大獎 Brisbane Design Award</p>
+								<p>美國泰坦地產大獎 TITAN Property Awards</p>
+								<p>義大利A'Design Award and Competition</p>
+								<p>柏林設計大獎 Berlin Design Award</p>
+							</div>
 						</div>
 					</div>
 					<input
@@ -147,27 +154,35 @@
 						class="tabs__radio"
 						name="tabs-example"
 						id="tab3" />
-					<label for="tab3" class="tabs__label">2022</label>
+					<label for="tab3" class="tabs__label">2021 - 2019</label>
 					<div class="tabs__content">
-						<div>
-							<p>2022</p>
-							<p></p>
+						<div class="award-area">
+							<p class="award-item-year">2021</p>
+							<div class="award-item-name">
+								<p>美國 International Design Awards</p>
+								<p>倫敦傑出地產獎 OPALAward</p>
+								<p>SPARK Awards</p>
+								<p>美國泰坦地產大獎 TITAN Property Awards</p>
+								<p>法國創新設計大獎 NOVUM Design Awards</p>
+								<p>美國 Muse Design Awards</p>
+							</div>
 						</div>
-						<div>
-							<p>2022</p>
-							<p></p>
+						<div class="award-area">
+							<p class="award-item-year">2020</p>
+							<div class="award-item-name">
+								<p>創新中國空間設計藝術大獎獲獎作品 C+Awards</p>
+								<p>亞洲設計大獎 Asia Design Prize</p>
+								<p>New York Design 紐約設計大獎</p>
+								<p>Hong Kong Design Awards 香港設計大獎</p>
+								<p>法國創新設計大獎 NOVUM Design Awards</p>
+								<p>美國 Muse Design Awards</p>
+							</div>
 						</div>
-						<div>
-							<p>2022</p>
-							<p></p>
-						</div>
-						<div>
-							<p>2022</p>
-							<p></p>
-						</div>
-						<div>
-							<p>2022</p>
-							<p></p>
+						<div class="award-area">
+							<p class="award-item-year">2019</p>
+							<div class="award-item-name">
+								<p>創新中國空間設計藝術大獎獲獎作品 C+Awards</p>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -687,10 +702,13 @@
 					</div>
 				</div>
 			</div>
+			<div class="qrcode">
+				<a href="https://www.instagram.com/sydesign_idd/"
+					><img src="./image/QRCode/sy_ig.webp" alt="sydesign_ig"
+				/></a>
+			</div>
 		</main>
-		<div class="qrcode">
-			<img src="./image/QRCode/sy_ig.jpg" alt="" />
-		</div>
+
 		<div class="contant-info" id="contact-us">
 			<p>萱源實業有限公司</p>
 			<p>02-2921-7363</p>
