index.css link revise

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			content="https://raw.githubusercontent.com/shiuanyuan/ShiuanYuan/main/image/sydesign_logo.jpg" />
 		<title>SY GROUP-test area</title>
 		<link rel="icon" href="./image/favicon.ico" type="image/x-icon" />
-		<link rel="stylesheet" href="./index test.css" />
+		<link rel="stylesheet" href="./index.css" />
 
 		<!-- swiper輪播套件 -->
 		<link
